RPI_PSOC5_Serial_01/RPS_PSOC5_Serial_01.cydsn/BUILD.log
--------------- Build Started: 10/08/2019 21:18:54 Project: RPS_PSOC5_Serial_01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\HPz420\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\HPz420\Documents\GitHub\RPI_PSOC5\RPI_PSOC5_Serial_01\RPS_PSOC5_Serial_01.cydsn\RPS_PSOC5_Serial_01.cyprj -d CY8C5267AXI-LP051 -s C:\Users\HPz420\Documents\GitHub\RPI_PSOC5\RPI_PSOC5_Serial_01\RPS_PSOC5_Serial_01.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Info: plm.M0038: The pin named PORT12D0(0) at location P12[0] prevents usage of special purposes: I2C:SCL. (App=cydsfit)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_541\Debug/main.lst -g -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_541\Debug/testCards.lst -g -Wall -ffunction-sections -ffat-lto-objects -O0 -c testCards.c -o .\ARM_GCC_541\Debug\testCards.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_541\Debug/program_RPI_EEPROM.lst -g -Wall -ffunction-sections -ffat-lto-objects -O0 -c program_RPI_EEPROM.c -o .\ARM_GCC_541\Debug\program_RPI_EEPROM.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_541\Debug/Test_RPP-UIO_16.lst -g -Wall -ffunction-sections -ffat-lto-objects -O0 -c Test_RPP-UIO_16.c -o .\ARM_GCC_541\Debug\Test_RPP-UIO_16.o
Test_RPP-UIO_16.c: In function 'blinkLED':
Test_RPP-UIO_16.c:22:2: warning: implicit declaration of function 'setRasPiPin' [-Wimplicit-function-declaration]
  setRasPiPin(RPI_Pin, 1);
  ^
Test_RPP-UIO_16.c: In function 'testRPPUIO16':
Test_RPP-UIO_16.c:49:15: error: 'IO21' undeclared (first use in this function)
      blinkLED(IO21);
               ^
Test_RPP-UIO_16.c:49:15: note: each undeclared identifier is reported only once for each function it appears in
Test_RPP-UIO_16.c:49:6: error: too few arguments to function 'blinkLED'
      blinkLED(IO21);
      ^
Test_RPP-UIO_16.c:20:6: note: declared here
 void blinkLED(uint8 RPI_Pin, uint8 val)
      ^
Test_RPP-UIO_16.c:50:15: error: 'SPI1_6' undeclared (first use in this function)
      blinkLED(SPI1_6);
               ^
Test_RPP-UIO_16.c:50:6: error: too few arguments to function 'blinkLED'
      blinkLED(SPI1_6);
      ^
Test_RPP-UIO_16.c:20:6: note: declared here
 void blinkLED(uint8 RPI_Pin, uint8 val)
      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
Test_RPP-UIO_16.c:51:15: error: 'SPI0_3' undeclared (first use in this function)
      blinkLED(SPI0_3);
               ^
Test_RPP-UIO_16.c:51:6: error: too few arguments to function 'blinkLED'
      blinkLED(SPI0_3);
      ^
Test_RPP-UIO_16.c:20:6: note: declared here
 void blinkLED(uint8 RPI_Pin, uint8 val)
      ^
Test_RPP-UIO_16.c:52:15: error: 'SPI0_4' undeclared (first use in this function)
      blinkLED(SPI0_4)
               ^
Test_RPP-UIO_16.c:52:6: error: too few arguments to function 'blinkLED'
      blinkLED(SPI0_4)
      ^
Test_RPP-UIO_16.c:20:6: note: declared here
 void blinkLED(uint8 RPI_Pin, uint8 val)
      ^
Test_RPP-UIO_16.c:53:6: error: expected ';' before 'blinkLED'
      blinkLED(SPI0_5)
      ^
--------------- Build Failed: 10/08/2019 21:19:17 ---------------
